# arcs-webhook

./: .gitignore  Cargo.toml  hacky-deploy.js
.cargo/: config
schema/: 0.sql  1.sql  2.sql  functions.sql  init.sql  setup.sh
schema/migrations/2023-08-24@18-51/: exec.sql  rollback.sql
schema/migrations/2023-08-24@19-52/: exec.sql  rollback.sql
schema/temp/: add_nontiebreaker_field.sql
schema/views/: chall.sql  helper.sql  team.sql  user.sql
src/: auth.rs  env.rs  lib.rs  main.rs  sql.rs
src/handlers/: deploy.rs  discord.rs  frontend.rs  mod.rs  sql.rs
src/handlers/sql/: attempts.rs  challs.rs  history.rs  mod.rs  solves.rs  teams.rs  users.rs
src/handlers/sql/prepared/: attempts.rs  challenges.rs  history.rs  mod.rs  solves.rs  teams.rs  users.rs
src/payloads/: mod.rs
src/payloads/incoming/: deploy.rs  discord.rs  frontend.rs  mod.rs  sql.rs
src/payloads/incoming/sql/: attempts.rs  chall.rs  history.rs  mod.rs  solve.rs  team.rs  user.rs
src/payloads/outgoing/: deploy.rs  discord.rs  frontend.rs  mod.rs  sql.rs
src/payloads/outgoing/sql/types/: attempts.rs  chall.rs  history.rs  mod.rs  solve.rs  team.rs  user.rs
src/tests/: challs.rs  defaults.rs  json.rs  mod.rs  req.rs  utils.rs
