[package]
name = "webhook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
arcs-env-rs = "0.1.0"
arcs-logging-rs = "0.1.2"
async-trait = "0.1.68"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["postgres", "json", "uuid", "time", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1.28.2", features = ["macros"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
