[package]
name = "webhook-rs"
version = "0.1.0"
edition = "2021"
default-run = "webhook-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
arcs-env-rs = "0.2"
arcs-logging-rs = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.3"
dotenvy = "0.15"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
reqwest = { version = "0.11", features = [
    "__rustls", "hyper-rustls", "json", "rustls", "rustls-pemfile", "rustls-tls", "rustls-tls-webpki-roots",
    "serde_json", "tokio-rustls", "webpki-roots"
], default-features = false }
rust-argon2 = "1"
schemars = { version = "0.8", features = ["uuid", "uuid1", "chrono", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "json", "uuid", "time", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
